# ProgettoTesiDID-FIDO

./: v3.sol
progettoTesi/ProgettoDID/client/: pyproject.toml
progettoTesi/ProgettoDID/client/client/: Private key (1).pem  Private key.pem  cert.pem  chiave.py  client.py  did.json  dids.txt  ethr.py  key.pem  prova.py  pyvenv.cfg  vp.json  vp_storage.json
progettoTesi/ProgettoDID/client/client/static/: index.html
progettoTesi/ProgettoDID/server/: pyproject.toml
progettoTesi/ProgettoDID/server/server/: certificato.pem  claims.py  client.py  client_with_socket.py  localhost.crt  localhost.key  prova.py  server.py
progettoTesi/ProgettoDID/server/server/static/: authenticate.html  index.html  register.html  userhome.html  webauthn-json.browser-ponyfill.js
test/: test.py  test2.py  test3.py  test_rail.py  test_results_10.csv  test_results_15.csv  test_results_20.csv  test_results_25.csv  test_results_30.csv  test_results_35.csv  test_results_5.csv  test_results_rail_10.csv  test_results_rail_15.csv  test_results_rail_20.csv  test_results_rail_25.csv  test_results_rail_30.csv  test_results_rail_5.csv  test_server.py
test/rail/: test_rail.py  test_rail_vp.py  test_results_rail_30.csv  test_results_rail_vp_10.csv  test_results_rail_vp_15.csv  test_results_rail_vp_20.csv  test_results_rail_vp_25.csv  test_results_rail_vp_30.csv  test_results_rail_vp_5.csv
test/server/: firefox_test_.py  log.tt  log_fire.txt  test_results_server_10.csv  test_results_server_15.csv  test_results_server_20.csv  test_results_server_25.csv  test_results_server_30.csv  test_server.py  (+1 more)
(+159 files in other folders)
