[tool.poetry]
name = "client"
version = "0.1.0"
description = "client per progetto tesi"
authors = ["Lorenzo Silvi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
didkit = "^0.3.1"
Flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
server = "client.client:main"
