[tool.poetry]
name = "Progetto-tesi-FIDO2-DID"
version = "0.1.0"
description = "Progeto per tesi su FIDO2 e DID"
authors = ["Lorenzo Silvi"]
license = ""
packages = [
  { include = "server" },
]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0"
fido2 = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "server.server:main"
